--- a/widgit/html/main.html
+++ b/widgit/html/main.html
@@ -31,7 +31,7 @@
 	</style>
 </head>
 <body>
-    <label id="con">Hello YUZH</label>
+    <label id="con">Hello 久格文化传媒</label>
     <div id="ceshi" onclick="ceshi();">测试点击</div>
 	<div id='sys-info'></div>
 
